--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,26 @@ body {
   font-family: sans-serif;
   font-size:16px;
 }
+.app{
+  padding:1.5rem;
+}
+.comment-form, 
+.full-article{
+  margin-bottom:2rem;
+}
+
+.topics-bar{
+  background-color:whitesmoke;
+  padding-top:1rem;
+  padding-bottom:1rem;
+  padding-left:1.5rem;
+  padding-right:1.5rem;
+}
+.topics-bar ul{
+  list-style-type:none;
+  margin:0;
+  padding:0;
+}
+.topics-bar li{
+  margin-right:1rem;
+}
