The briefest of checks to ensure works down to lower screen sizes

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,10 @@ body {
   background-color:whitesmoke;
 }
 .app{
-  padding:2rem;
+  padding:0.8rem;
+}
+@media(min-width:768px){
+  .app{
+    padding:2rem;
+  }
 }
