--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,14 @@ body {
 .app{
   padding:0.8rem;
 }
+.hide-on-mobile{
+  display:none;
+}
 @media(min-width:768px){
   .app{
     padding:2rem;
+  }
+  .hide-on-mobile{
+    display:inline;
   }
 }
